// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render a Card with Footer 1`] = `
.c4 {
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-color: hsla(216,44%,23%,0.18);
}

.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 24px;
  padding-right: 24px;
  border-radius: 4px;
}

.c3 {
  margin-top: 24px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-top: 24px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-top: 0px;
  margin-left: 16px;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c14 {
  margin-left: 16px;
}

.c10 {
  min-height: 36px;
  width: 100%;
  cursor: pointer;
  background-color: hsla(218,89%,51%,0);
  border-color: hsla(213,89%,56%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c10:hover {
  background-color: hsla(218,89%,51%,0.09);
  border-color: hsla(213,89%,56%,1);
}

.c10:active {
  background-color: hsla(218,89%,51%,0.32);
  border-color: hsla(213,89%,56%,1);
}

.c10:focus {
  background-color: hsla(218,89%,51%,0.18);
  border-color: hsla(213,89%,56%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c10 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c15 {
  min-height: 36px;
  width: 100%;
  cursor: pointer;
  background-color: hsla(213,89%,56%,1);
  border-color: hsla(213,89%,56%,1);
  border-width: 1px;
  border-radius: 2px;
  border-style: solid;
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 20px;
  padding-right: 20px;
  -webkit-transition-property: background-color,border-color,box-shadow;
  transition-property: background-color,border-color,box-shadow;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  position: relative;
}

.c15:hover {
  background-color: hsla(218,89%,51%,1);
  border-color: hsla(218,89%,51%,1);
}

.c15:active {
  background-color: hsla(227,100%,45%,1);
  border-color: hsla(227,100%,45%,1);
}

.c15:focus {
  background-color: hsla(223,95%,48%,1);
  border-color: hsla(223,95%,48%,1);
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
  outline: none;
}

.c15 * {
  -webkit-transition-property: color,fill;
  transition-property: color,fill;
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
}

.c2 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c7 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c13 {
  color: hsla(213,89%,56%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c16 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: center;
  margin: 0;
  padding: 0;
}

.c12 {
  opacity: 1;
}

.c1 {
  box-shadow: 0px 1px 2px 0px hsla(216,44%,23%,0.18),0px 0px 1px 0px hsla(216,44%,23%,0.18);
  background-color: hsla(0,0%,100%,1);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class=""
    >
      <p
        class="c2 Text__StyledText-wkh56f-0"
        color="surface.text.normal.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="100"
        font-style="normal"
        font-weight="regular"
      >
        Plain Card
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      />
      <div
        class="c5"
        display="flex"
      >
        <div
          class=""
        >
          <p
            class="c6 Text__StyledText-wkh56f-0"
            color="surface.text.normal.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="100"
            font-style="normal"
            font-weight="bold"
          >
            Card Footer
          </p>
          <p
            class="c7 Text__StyledText-wkh56f-0"
            color="surface.text.normal.lowContrast"
            data-blade-component="text"
            font-family="text"
            font-size="75"
            font-style="normal"
            font-weight="regular"
          >
            Card footer subtitle
          </p>
        </div>
        <div
          class="c8"
          display="flex"
        >
          <div
            class="c9"
          >
            <button
              class="c10"
              data-blade-component="button"
              role="button"
              type="button"
            >
              <div
                class="c11 c12"
                display="flex"
              >
                <div
                  class="c13"
                  color="action.text.secondary.default"
                  font-size="100"
                  font-weight="bold"
                >
                  Delete
                </div>
              </div>
            </button>
          </div>
          <div
            class="c14"
          />
          <div
            class="c9"
          >
            <button
              class="c15"
              data-blade-component="button"
              role="button"
              type="button"
            >
              <div
                class="c11 c12"
                display="flex"
              >
                <div
                  class="c16"
                  color="action.text.primary.default"
                  font-size="100"
                  font-weight="bold"
                >
                  Save
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a Card with Header 1`] = `
.c16 {
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-color: hsla(216,44%,23%,0.18);
}

.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 24px;
  padding-right: 24px;
  border-radius: 4px;
}

.c2 {
  margin-bottom: 24px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 24px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin-right: 8px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  margin-left: 8px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 8px;
  padding-right: 8px;
}

.c14 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c7 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 1rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  margin: 0;
  padding: 0;
}

.c11 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c13 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  margin: 0;
  padding: 0;
}

.c17 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  margin: 0;
  padding: 0;
}

.c12 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 1;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c9 {
  background-color: hsla(216,44%,23%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c15 {
  background-color: hsla(216,44%,23%,0.09);
  border-radius: 9999px;
  max-width: 120px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c1 {
  box-shadow: 0px 1px 2px 0px hsla(216,44%,23%,0.18),0px 0px 1px 0px hsla(216,44%,23%,0.18);
  background-color: hsla(0,0%,100%,1);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        display="flex"
      >
        <div
          class="c4"
          display="flex"
        >
          <div
            class="c5"
            display="flex"
          >
            <svg
              aria-hidden="true"
              data-blade-component="icon"
              fill="none"
              height="24px"
              viewBox="0 0 24 24"
              width="24px"
            >
              <path
                d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
                fill="hsla(217, 56%, 17%, 1)"
              />
              <path
                d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
                fill="hsla(217, 56%, 17%, 1)"
              />
              <path
                clip-rule="evenodd"
                d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
                fill="hsla(217, 56%, 17%, 1)"
                fill-rule="evenodd"
              />
            </svg>
          </div>
          <div
            class=""
          >
            <div
              class="c6"
              display="flex"
            >
              <h6
                class="c7"
                color="surface.text.normal.lowContrast"
                data-blade-component="heading"
                font-family="text"
                font-size="200"
                font-style="normal"
                font-weight="bold"
              >
                Card Header
              </h6>
              <div
                class="c8"
              >
                <div
                  class="c9"
                >
                  <div
                    class="c10"
                    data-blade-component="counter"
                    display="flex"
                    overflow="hidden"
                  >
                    <p
                      class="c11 c12"
                      color="feedback.text.neutral.lowContrast"
                      data-blade-component="text"
                      font-family="text"
                      font-size="75"
                      font-style="normal"
                      font-weight="regular"
                    >
                      12
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <p
              class="c13 "
              color="surface.text.normal.lowContrast"
              data-blade-component="text"
              font-family="text"
              font-size="75"
              font-style="normal"
              font-weight="regular"
            >
              Card subtitle
            </p>
          </div>
        </div>
        <div
          class="c14"
        >
          <div
            class="c15"
            data-blade-component="badge"
          >
            <div
              class="c10"
              display="flex"
              overflow="hidden"
            >
              <p
                class="c11 c12"
                color="feedback.text.neutral.lowContrast"
                data-blade-component="text"
                font-family="text"
                font-size="75"
                font-style="normal"
                font-weight="regular"
              >
                NEW
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c16"
      />
    </div>
    <div
      class=""
    >
      <p
        class="c17 "
        color="surface.text.normal.lowContrast"
        data-blade-component="text"
        font-family="text"
        font-size="100"
        font-style="normal"
        font-weight="regular"
      >
        Plain Card
      </p>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render a plain Card 1`] = `
.c0 {
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 24px;
  padding-right: 24px;
  border-radius: 4px;
}

.c1 {
  box-shadow: 0px 1px 2px 0px hsla(216,44%,23%,0.18),0px 0px 1px 0px hsla(216,44%,23%,0.18);
  background-color: hsla(0,0%,100%,1);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class=""
    >
      Plain Card
    </div>
  </div>
</div>
`;
